# rust-stm32f103x-template

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
src/bsp/: blink.rs  mod.rs
src/peripherals/: gpio.rs  mod.rs  timer.rs
