[package]
authors = ["jepbura <jepbura@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-stm32f103x-template"
version = "0.1.0"

[dependencies]
#cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
#cortex-m-rtic = "1.1.4" # Real-Time Interrupt-driven Concurrency (RTIC)
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
#stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] } # HAL crate for stm32f103
stm32f1 = { version = "0.15.1", features = ["stm32f103"] }  # Check for the latest version
embedded-hal = "1.0.0"
nb = "1.1.0"                       # Non-blocking helper crate

# this lets you use `cargo fix`!
[[bin]]
name = "rust-stm32f103x-template"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"               # Optimize for size

[profile.dev]
opt-level = "z"               # Optimize for size

[default]
chip = "STM32F103RET6"
